--- a/PyLearn7-Assignment40/billionaires.ipynb
+++ b/PyLearn7-Assignment40/billionaires.ipynb
@@ -269,6 +269,139 @@
     "data = data.dropna()\n",
     "data.isnull().sum()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Delete B and $ from NetWorth column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"NetWorth\"] = data[\"NetWorth\"].str.strip(\"$\")\n",
+    "data[\"NetWorth\"] = data[\"NetWorth\"].str.strip(\"B\")\n",
+    "data[\"NetWorth\"] = data[\"NetWorth\"].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>NetWorth</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Industry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jeff Bezos</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>Technology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Elon Musk</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Tesla, SpaceX</td>\n",
+       "      <td>2</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>Automotive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bernard Arnault &amp; family</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>France</td>\n",
+       "      <td>LVMH</td>\n",
+       "      <td>3</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>Fashion &amp; Retail</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bill Gates</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Microsoft</td>\n",
+       "      <td>4</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Technology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mark Zuckerberg</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>5</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>Technology</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Name  NetWorth        Country         Source  Rank  \\\n",
+       "0                Jeff Bezos     177.0  United States         Amazon     1   \n",
+       "1                 Elon Musk     151.0  United States  Tesla, SpaceX     2   \n",
+       "2  Bernard Arnault & family     150.0         France           LVMH     3   \n",
+       "3                Bill Gates     124.0  United States      Microsoft     4   \n",
+       "4           Mark Zuckerberg      97.0  United States       Facebook     5   \n",
+       "\n",
+       "    Age          Industry  \n",
+       "0  57.0        Technology  \n",
+       "1  49.0        Automotive  \n",
+       "2  72.0  Fashion & Retail  \n",
+       "3  65.0        Technology  \n",
+       "4  36.0        Technology  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
   }
  ],
  "metadata": {
