--- a/PyLearn7-Assignment40/billionaires data analysis/billionaires.ipynb
+++ b/PyLearn7-Assignment40/billionaires data analysis/billionaires.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "9  63.0            Diversified  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "4  36.0        Technology  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "9         diversified    10  63.0            Diversified  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "9        chemicals     32"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
        "17                      Sports     24"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
        "4        Germany    115"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1030,6 +1030,269 @@
     "plt.pie(df[\"count\"], labels=df[\"Country\"])\n",
     "plt.title(\"Countries with the most billionaires\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtaining the mean and variance of the age of the richest people in the world"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>NetWorth</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Industry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jeff Bezos</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>Technology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Elon Musk</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Tesla, SpaceX</td>\n",
+       "      <td>2</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>Automotive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bernard Arnault &amp; family</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>France</td>\n",
+       "      <td>LVMH</td>\n",
+       "      <td>3</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>Fashion &amp; Retail</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bill Gates</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Microsoft</td>\n",
+       "      <td>4</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Technology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mark Zuckerberg</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>5</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>Technology</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Name  NetWorth        Country         Source  Rank  \\\n",
+       "0                Jeff Bezos     177.0  United States         Amazon     1   \n",
+       "1                 Elon Musk     151.0  United States  Tesla, SpaceX     2   \n",
+       "2  Bernard Arnault & family     150.0         France           LVMH     3   \n",
+       "3                Bill Gates     124.0  United States      Microsoft     4   \n",
+       "4           Mark Zuckerberg      97.0  United States       Facebook     5   \n",
+       "\n",
+       "    Age          Industry  \n",
+       "0  57.0        Technology  \n",
+       "1  49.0        Automotive  \n",
+       "2  72.0  Fashion & Retail  \n",
+       "3  65.0        Technology  \n",
+       "4  36.0        Technology  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jeff Bezos</td>\n",
+       "      <td>57.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Elon Musk</td>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bernard Arnault &amp; family</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bill Gates</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mark Zuckerberg</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2750</th>\n",
+       "      <td>Daniel Yong Zhang</td>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2751</th>\n",
+       "      <td>Zhang Yuqiang</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2752</th>\n",
+       "      <td>Zhao Meiguang</td>\n",
+       "      <td>58.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2753</th>\n",
+       "      <td>Zhong Naixiong</td>\n",
+       "      <td>58.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2754</th>\n",
+       "      <td>Zhou Wei family</td>\n",
+       "      <td>54.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2676 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Name   Age\n",
+       "0                   Jeff Bezos  57.0\n",
+       "1                    Elon Musk  49.0\n",
+       "2     Bernard Arnault & family  72.0\n",
+       "3                   Bill Gates  65.0\n",
+       "4              Mark Zuckerberg  36.0\n",
+       "...                        ...   ...\n",
+       "2750         Daniel Yong Zhang  49.0\n",
+       "2751             Zhang Yuqiang  65.0\n",
+       "2752             Zhao Meiguang  58.0\n",
+       "2753            Zhong Naixiong  58.0\n",
+       "2754           Zhou Wei family  54.0\n",
+       "\n",
+       "[2676 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Selecting multiple columns in a Pandas dataframe\n",
+    "\n",
+    "df = data[[\"Name\", \"Age\"]] # or df = data.filter([\"Name\", \"Age\"])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63.1136023916293"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = data[\"Age\"].mean()\n",
+    "df"
    ]
   }
  ],
